[package]
name = "ledger-rs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrow = "55.0.0"
arrow_convert = { version = "0.9.0", features = ["rust_decimal"] }
chrono = "0.4"
datafusion = { version = "47.0.0", features = ["nested_expressions", "string_expressions"] }
rust_decimal = "1.36.0"
winnow = "0.7.4"
