[package]
name = "ledger-rs-qfx"
version = "0.1.0"
edition = "2024"

[dependencies]
ledger-rs-core = { path = "../ledger-rs-core" }
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
encoding_rs = { version = "0.8.35", features = ["serde"] }
encoding_rs_io = "0.1.7"
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
sgmlish = "0.2.0"
