[package]
name = "ledger-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ledger-rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
ledger-rs-core = { path = "../ledger-rs-core" }
ledger-rs-csv = { path = "../ledger-rs-csv" }
ledger-rs-qfx = { path = "../ledger-rs-qfx" }
tokio = { version = "1.44.2", features = ["full"] }
